err/asposecloud.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/asposecloud'...
Listing './lib/python3.5/site-packages/asposecloud/barcode'...
Listing './lib/python3.5/site-packages/asposecloud/cells'...
Compiling './lib/python3.5/site-packages/asposecloud/cells/__init__.py'...
***   File "./lib/python3.5/site-packages/asposecloud/cells/__init__.py", line 45
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/asposecloud/common.py'...
***   File "./lib/python3.5/site-packages/asposecloud/common.py", line 190
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/asposecloud/email'...
Compiling './lib/python3.5/site-packages/asposecloud/email/__init__.py'...
***   File "./lib/python3.5/site-packages/asposecloud/email/__init__.py", line 46
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/asposecloud/imaging'...
Compiling './lib/python3.5/site-packages/asposecloud/imaging/__init__.py'...
***   File "./lib/python3.5/site-packages/asposecloud/imaging/__init__.py", line 62
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/asposecloud/ocr'...
Listing './lib/python3.5/site-packages/asposecloud/pdf'...
Compiling './lib/python3.5/site-packages/asposecloud/pdf/__init__.py'...
***   File "./lib/python3.5/site-packages/asposecloud/pdf/__init__.py", line 45
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/asposecloud/slides'...
Compiling './lib/python3.5/site-packages/asposecloud/slides/__init__.py'...
***   File "./lib/python3.5/site-packages/asposecloud/slides/__init__.py", line 46
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/asposecloud/tasks'...
Compiling './lib/python3.5/site-packages/asposecloud/tasks/__init__.py'...
***   File "./lib/python3.5/site-packages/asposecloud/tasks/__init__.py", line 41
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/asposecloud/words'...
Compiling './lib/python3.5/site-packages/asposecloud/words/__init__.py'...
***   File "./lib/python3.5/site-packages/asposecloud/words/__init__.py", line 46
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/asposecloud-1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
